resources/stylesheets/component/common/mobile-featured-actions-button.less
.bs-mobile-featured-actions-button {
	position: fixed;
	right: 2.5vw;
	bottom: 2.5vw;
	z-index: 15;

	& > i {
		height: 48px;
		width: 48px;
		color: @mobile-more-menu-dropdown-color;
		background-color: @mobile-more-menu-dropdown-bg-color;
		border-radius: 24px;
		display: block;
		text-align: center;

		&::before {
			font-family: 'entypo';
			content: "\e9f7";
			font-weight: 700;
			font-size: 1.5rem;
			line-height: 48px;
			font-style: normal;
			text-align: center;
			height: 48px;
			width: 48px;
		}
	}

	&:hover {
		text-decoration: none;
	}
}

